<resources>
    <string name="app_name">PiApp</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="ok">Ok</string>
    <string name="Login">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="singUpNow">Sign up!</string>
    //Register
    <string name="chooseAvatar">Choose your profile picture</string>
    <string name="open">Open</string>
    <string name="singUp">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>

    //Home
    <string name="logOut">Log out</string>
</resources>